--- a/app/src/main/res/layout/carta.xml
+++ b/app/src/main/res/layout/carta.xml
@@ -15,8 +15,8 @@
         android:layout_margin="8dp"
         android:orientation="vertical"
         android:padding="8dp"
-        app:layout_constraintEnd_toCenterXOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.5">
 
@@ -65,8 +65,8 @@
         android:layout_margin="8dp"
         android:orientation="vertical"
         android:padding="8dp"
+        app:layout_constraintStart_toEndOf="@id/product1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toCenterXOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.5">
 
@@ -115,8 +115,8 @@
         android:layout_margin="8dp"
         android:orientation="vertical"
         android:padding="8dp"
-        app:layout_constraintEnd_toCenterXOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/product1"
         app:layout_constraintWidth_percent="0.5">
 
@@ -165,8 +165,8 @@
         android:layout_margin="8dp"
         android:orientation="vertical"
         android:padding="8dp"
+        app:layout_constraintStart_toEndOf="@id/product3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toCenterXOf="parent"
         app:layout_constraintTop_toBottomOf="@id/product2"
         app:layout_constraintWidth_percent="0.5">
 
